PHP2 Homework 7 ДЗ по тестам. Пытался тестировать классы которые обращаются к базе данных, но что-то пошло не так. Если можно, то разберите хотябы один пример, как это правильно делать.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
         "twig/twig": "2.x-dev",
-        "phpunit/phpunit": "9.0.1"
+        "yiisoft/yii2": "3.0.x-dev",
+        "phpunit/phpunit": "7.5.20",
+        "phpunit/dbunit": "4.0.0"
     }
 }
